playground: Fix overflow of vertical bar charts

--- a/tuktuktwo/src/examples/tuktwo/Bar/bar.css
+++ b/tuktuktwo/src/examples/tuktwo/Bar/bar.css
@@ -2,4 +2,5 @@
   height: 100px;
   width: 18px;
   margin-left: 4px;
+  min-width: 0;
 }
